# notstd

./: README.md  libjit.make  libjit.update  meson.build  meson_options.txt
include/notstd/: bipbuffer.h  core.h  delay.h  dict.h  futex.h  fzs.h  generics.h  lbuffer.h  list.h  map.h  mth.h  phq.h  rbhash.h  rbtree.h  regex.h  str.h  threads.h  trie.h  utf8.h  vector.h
include/notstd/core/: compiler.h  debug.h  error.h  mathmacro.h  memory.h  type.h  xmacro.h
private/: jit.h
src/concurrency/: futex.c  threads.c
src/core/: core.c  err.c  math.c
src/datastructure/: bipbuffer.c  dict.c  fzs.c  hashalg.c  lbuffer.c  list.c  map.c  phq.c  rbhash.c  rbtree.c  trie.c  vector.c
src/memory/: extras.c  memory.c  page.c  protect.c
src/string/: itoa.c  longlong.h  regex.c  str.c  utf8.c  utf8_data.h  utf8_property.h
src/time/: delay.c
test/: README.md
test/data/regex/: test.generic
test/scanbuild/: datastructure  delay  memory  string
test/src/: bipbuffer.c  datastructure.c  delay.c  dict.c  fzs.c  hash.c  lbuffer.c  list.c  memory.c  phq.c  rbtree.c  string.c  threads.c  trie.c  vector.c
test/valgrind/: datastructure  delay  memory  string
